--- a/ab-testing/ab_test.ipynb
+++ b/ab-testing/ab_test.ipynb
@@ -1,1 +1,50 @@
-# A/B Тестирование маркетинговой кампании\n## Результаты: конверсия увеличилась на 15%
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A/B Тестирование маркетинговой кампании\n",
+    "\n",
+    "## Цель проекта\n",
+    "Оценка эффективности новой маркетинговой кампании.\n",
+    "\n",
+    "## Метрики\n",
+    "- Конверсия\n",
+    "- Средний чек\n",
+    "- Retention rate\n",
+    "\n",
+    "## Результаты\n",
+    "Конверсия увеличилась на **15%** (p-value < 0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Импорт библиотек\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import scipy.stats as stats\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "print('A/B тестирование выполнено успешно')"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.9.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
